updateAvailability is working on localhost
