# swagger-output.json
@@ -7,19 +7,13 @@
   },
   "host": "cse341proj3.onrender.com",
   "basePath": "/",
-  "schemes": [
-    "https"
-  ],
+  "schemes": ["https"],
   "paths": {
     "/": {
       "get": {
-        "tags": [
-          "Home"
-        ],
+        "tags": ["Home"],
         "description": "",
-        "produces": [
-          "text/html"
-        ],
+        "produces": ["text/html"],
         "responses": {
           "200": {
             "description": "OK"
@@ -29,9 +23,7 @@
     },
     "/profile/": {
       "get": {
-        "tags": [
-          "Profile"
-        ],
+        "tags": ["Profile"],
         "description": "",
         "responses": {
           "200": {
@@ -40,18 +32,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read"
-            ]
+            "OAuth2": ["read"]
           }
         ]
       }
     },
     "/user_profile/": {
       "get": {
-        "tags": [
-          "User Profile"
-        ],
+        "tags": ["User Profile"],
         "description": "",
         "responses": {
           "200": {
@@ -63,17 +51,12 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       },
       "post": {
-        "tags": [
-          "User Profile"
-        ],
+        "tags": ["User Profile"],
         "description": "",
         "parameters": [
           {
@@ -111,19 +94,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       }
     },
     "/user_profile/{id}": {
       "get": {
-        "tags": [
-          "User Profile"
-        ],
+        "tags": ["User Profile"],
         "description": "",
         "parameters": [
           {
@@ -146,17 +124,12 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       },
       "put": {
-        "tags": [
-          "User Profile"
-        ],
+        "tags": ["User Profile"],
         "description": "",
         "parameters": [
           {
@@ -206,17 +179,12 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       },
       "delete": {
-        "tags": [
-          "User Profile"
-        ],
+        "tags": ["User Profile"],
         "description": "",
         "parameters": [
           {
@@ -239,19 +207,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       }
     },
     "/user_skills/": {
       "get": {
-        "tags": [
-          "User Skills"
-        ],
+        "tags": ["User Skills"],
         "description": "",
         "responses": {
           "200": {
@@ -263,17 +226,12 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       },
       "post": {
-        "tags": [
-          "User Skills"
-        ],
+        "tags": ["User Skills"],
         "description": "",
         "parameters": [
           {
@@ -314,19 +272,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       }
     },
     "/user_skills/{id}": {
       "get": {
-        "tags": [
-          "User Skills"
-        ],
+        "tags": ["User Skills"],
         "description": "",
         "parameters": [
           {
@@ -349,17 +302,12 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       },
       "put": {
-        "tags": [
-          "User Skills"
-        ],
+        "tags": ["User Skills"],
         "description": "",
         "parameters": [
           {
@@ -412,17 +360,12 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       },
       "delete": {
-        "tags": [
-          "User Skills"
-        ],
+        "tags": ["User Skills"],
         "description": "",
         "parameters": [
           {
@@ -445,19 +388,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       }
     },
     "/skills/": {
       "get": {
-        "tags": [
-          "Skills"
-        ],
+        "tags": ["Skills"],
         "description": "",
         "responses": {
           "200": {
@@ -469,17 +407,12 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       },
       "post": {
-        "tags": [
-          "Skills"
-        ],
+        "tags": ["Skills"],
         "description": "",
         "parameters": [
           {
@@ -514,19 +447,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       }
     },
     "/skills/{id}": {
       "get": {
-        "tags": [
-          "Skills"
-        ],
+        "tags": ["Skills"],
         "description": "",
         "parameters": [
           {
@@ -549,17 +477,12 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       },
       "put": {
-        "tags": [
-          "Skills"
-        ],
+        "tags": ["Skills"],
         "description": "",
         "parameters": [
           {
@@ -606,17 +529,12 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       },
       "delete": {
-        "tags": [
-          "Skills"
-        ],
+        "tags": ["Skills"],
         "description": "",
         "parameters": [
           {
@@ -639,19 +557,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       }
     },
     "/availabilities/": {
       "get": {
-        "tags": [
-          "Availabilities"
-        ],
+        "tags": ["Availabilities"],
         "description": "",
         "responses": {
           "200": {
@@ -663,17 +576,12 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       },
       "post": {
-        "tags": [
-          "Availabilities"
-        ],
+        "tags": ["Availabilities"],
         "description": "",
         "parameters": [
           {
@@ -711,19 +619,14 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
           }
         ]
       }
     },
     "/availabilities/{id}": {
       "get": {
-        "tags": [
-          "Availabilities"
-        ],
+        "tags": ["Availabilities"],
         "description": "",
         "parameters": [
           {
@@ -746,19 +649,69 @@
         },
         "security": [
           {
-            "OAuth2": [
-              "read",
-              "write"
-            ]
+            "OAuth2": ["read", "write"]
+          }
+        ]
+      },
+      "put": {
+        "tags": ["Availabilities"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "availabilityID": {
+                  "example": "any"
+                },
+                "userID": {
+                  "example": "any"
+                },
+                "startTime": {
+                  "example": "any"
+                },
+                "endTime": {
+                  "example": "any"
+                },
+                "isBooked": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2": ["read", "write"]
           }
         ]
       }
     },
     "/sessions/": {
       "get": {
-        "tags": [
-          "Sessions"
-        ],
+        "tags": ["Sessions"],
         "description": "",
         "responses": {
           "200": {
@@ -770,9 +723,7 @@
     },
     "/feedback/": {
       "get": {
-        "tags": [
-          "Feedback"
-        ],
+        "tags": ["Feedback"],
         "description": "",
         "responses": {
           "200": {
